Edit footer styles

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         <link rel="stylesheet" type="text/css" href="css/icon-font.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="img/diamond.svg">
         <link rel="stylesheet" href="css/icon-font.css">
-        <title>Natours | Exciting tours for adventurous people</title>
+        <title>Martin | Portfolio</title>
     </head>
     <body>
         <div class="navigation">
@@ -28,33 +28,30 @@
         </div>
         <header class="header">
             <div class="header__logo-box">
-                <img src="img/logo-white.png" alt="Logo" class="header__logo">
+                <img src="img/icons8-diamond.png" alt="Logo" class="header__logo">
             </div>
             <div class="header__text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">
-                        Outdoors
+                        Martin Njoroge
                     </span>
                     <span class="heading-primary--sub">
-                        is where life happens
+                        Software Developer
                     </span>
                 </h1>
-
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
-        
         <main>
-            <section class="section-tours">
+            <section id="projects" class="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        Projects <a href="#projects"></a>
+                        Projects
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-1-of-3">
                         <div class="card__title u-center-text">
-                            <h3 class="u-margin-bottom-medium">THE NEXT WEB</h3>
+                            <h3 id="card-1" class="u-margin-bottom-medium">THE NEXT WEB</h3>
                         </div>
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -80,7 +77,7 @@
                     </div>
                     <div class="col-1-of-3">
                         <div class="card__title u-center-text">
-                            <h3 class="u-margin-bottom-medium">STAY IN TOUCH</h3>
+                            <h3 id="card-2" class="u-margin-bottom-medium">STAY IN TOUCH</h3>
                         </div>
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -131,81 +128,25 @@
                     </div>
                 </div>
             </section>
-            <section class="section-stories">
-                <div class="bg-video">
-                    <video class="bg-video__content" autoplay muted loop>
-                        <source src="img/bg-video.mp4" type="video/mp4">
-                        Your browser is not supported!
-                    </video>
-                </div>
-                <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
-                        We make people generally happy
-                    </h2>
-                </div>
-                <div class="row">
-                    <div class="story">
-                        <figure class="story__shape">
-                            <img src="img/nat-8.jpg" class="story__img" alt="Person on a tour">
-                            <figcaption class="story__caption">
-                                Mary Smith
-                            </figcaption>
-                        </figure>
-                        <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">
-                                I had the best week ever with my family
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Nullam vel felis id nulla pellentesque placerat at vitae eros.
-                                Curabitur in vulputate nisl, eu tincidunt neque. Nulla posuere nunc in ultrices tempus. 
-                                Nunc in nisl eget nisl sodales malesuada nec mollis sem.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="story">
-                        <figure class="story__shape">
-                            <img src="img/nat-9.jpg" class="story__img" alt="Person on a tour">
-                            <figcaption class="story__caption">
-                                Jack Wilson
-                            </figcaption>
-                        </figure>
-                        <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">
-                                Wow! My life is completely different now
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                Nullam vel felis id nulla pellentesque placerat at vitae eros.
-                                Curabitur in vulputate nisl, eu tincidunt neque. Nulla posuere nunc in ultrices tempus. 
-                                Nunc in nisl eget nisl sodales malesuada nec mollis sem.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn-text">Read all stories &rarr;</a>
-                </div>
-            </section>
         </main>
-        <footer class="footer">
+        <footer id="contacts" class="footer">
             <div class="footer__logo-box">
-                <img src="img/logo-green-2x.png" alt="Full Logo" class="footer__logo">
+                <h2 class="heading-secondary">
+                    Contacts
+                </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
                             <li class="footer__item"><a href="https://www.linkedin.com/in/martin-kariuki-njoroge/" class="footer__link">LinkedIn</a></li>
-                            <li class="footer__item"><a href="https://angel.co/u/martin-kariuki-njoroge" class="footer__link">Angelist</a></li>
+                            <li class="footer__item"><a href="https://hackernoon.com/u/maritn" class="footer__link">Hackernoon</a></li>
                             <li class="footer__item"><a href="https://twitter.com/NjoroKaris" class="footer__link">Twitter</a></li>
                             <li class="footer__item"><a href="https://github.com/kwizl/" class="footer__link">Github</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-1-of-2">
+                <div id="email" class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
                             <li class="footer__item">Email: <a href="#" class="footer__link">karis.njoroge@gmail.com</a></li>
