Make the projects section responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </header>
         <main>
-            <section id="projects" class="section-tours">
+            <section id="projects" class="section-projects">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Projects
@@ -70,7 +70,10 @@
                             </div>
                             <div class="card__side card__side--back card__side--back-1">
                                 <div class="card__cta">
-                                    <a href="https://github.com/kwizl/TheNextWeb" class="btn btn--white">View!</a>
+                                    <div class="card__project-box">
+                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                    </div>
+                                    <a href="https://github.com/kwizl/TheNextWeb" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
@@ -95,14 +98,17 @@
                             </div>
                             <div class="card__side card__side--back card__side--back-2">
                                 <div class="card__cta">
-                                    <a href="https://social-media.herokuapp.com" class="btn btn--white">View!</a>
+                                    <div class="card__project-box">
+                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                    </div>
+                                    <a href="https://social-media.herokuapp.com" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-1-of-3">
                         <div class="card__title u-center-text">
-                            <h3 class="u-margin-bottom-medium">BOOKCRAZE</h3>
+                            <h3 id="card-3" class="u-margin-bottom-medium">BOOKCRAZE</h3>
                         </div>
                         <div class="card">
                             <div class="card__side card__side--front">
@@ -121,7 +127,10 @@
                             </div>
                             <div class="card__side card__side--back card__side--back-3">
                                 <div class="card__cta">
-                                    <a href="https://enigmatic-springs-19832.herokuapp.com" class="btn btn--white">View!</a>
+                                    <div class="card__project-box">
+                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                    </div>
+                                    <a href="https://enigmatic-springs-19832.herokuapp.com" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +158,7 @@
                 <div id="email" class="col-1-of-2">
                     <div class="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item">Email: <a href="#" class="footer__link">karis.njoroge@gmail.com</a></li>
+                            <li class="footer__item">Email: <a class="footer__email">karis.njoroge@gmail.com</a></li>
                         </ul>
                     </div>
                 </div>
