--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             </div>
         </header>
         <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h3 class="heading-secondary">
+                        My Background
+                    </h3>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-1">
+                        <p class="paragraph">
+                            I am a technology lover with a passion for coding and learning the latest technologies in software development. I have engaged in multiple projects from game development using Unity Engine to web development(Ruby, C# and, Node.js), the latter being my focus. I have done projects in collaboration with other developers using cloud technologies such as Heroku and Azure while following System Development Life Cycle practices.Currently, I am a Full-stack developer using Rails. I have also published articles on hackernoon.
+                        </p>
+                    </div>
+                </div>
+            </section>
             <section id="projects" class="section-projects">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
