Add google analytics to github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="row">
                     <div class="col-1-of-1">
                         <p class="paragraph">
-                            I am a technology lover with a passion for coding and learning the latest technologies in software development. I have engaged in multiple projects from game development using Unity Engine to web development(Ruby, C# and, Node.js), the latter being my focus. I have done projects in collaboration with other developers using cloud technologies such as Heroku and Azure while following System Development Life Cycle practices.Currently, I am a Full-stack developer using Rails. I have also published articles on hackernoon.
+                            I am a technology lover with a passion for coding and learning the latest technologies in software development. I have engaged in multiple projects from game development using Unity Engine to web development(Ruby, C# and, Node.js), Rails being my focus. I have done projects in collaboration with other developers using cloud technologies such as Heroku and Azure while following System Development Life Cycle practices.Currently, I am a Full-stack developer using Rails. I have also published articles on hackernoon.
                         </p>
                     </div>
                 </div>
