Fixing bug issue

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                             <div class="card__side card__side--back card__side--back-1">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                        <a href="https://social-media.herokuapp.com" target="_blank" class="card__project-only">Source Code</a>
                                     </div>
-                                    <a href="https://github.com/kwizl/TheNextWeb" class="btn btn--white">Live Demo!</a>
+                                    <a href="https://github.com/kwizl/TheNextWeb" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
@@ -109,9 +109,9 @@
                             <div class="card__side card__side--back card__side--back-2">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                        <a href="https://social-media.herokuapp.com" target="_blank" class="card__project-only">Source Code</a>
                                     </div>
-                                    <a href="https://social-media.herokuapp.com" class="btn btn--white">Live Demo!</a>
+                                    <a href="https://social-media.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
@@ -138,9 +138,9 @@
                             <div class="card__side card__side--back card__side--back-3">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://social-media.herokuapp.com" class="card__project-only">Source Code</a>
+                                        <a href="https://social-media.herokuapp.com" target="_blank" class="card__project-only">Source Code</a>
                                     </div>
-                                    <a href="https://enigmatic-springs-19832.herokuapp.com" class="btn btn--white">Live Demo!</a>
+                                    <a href="https://enigmatic-springs-19832.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
