--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <div class="card__project-box">
                                         <a href="https://github.com/kwizl/lifestyle" target="_blank" class="card__project-only">Source Code</a>
                                     </div>
-                                    <a href="https://enigmatic-springs-19832.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
+                                    <a href="https://secure-brook-97667.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
                             </div>
                         </div>
