--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="card__side card__side--back card__side--back-1">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://github.com/kwizl/TheNextWeb" target="_blank" class="card__project-only">Source Code</a>
+                                        <a href="https://github.com/kwizl/TheNextWeb" target="_blank" class="card__project-only">Github</a>
                                     </div>
                                     <a href="https://raw.githack.com/mariancristu/TheNextWeb/complete-project/index.html" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
@@ -109,7 +109,7 @@
                             <div class="card__side card__side--back card__side--back-2">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://github.com/kwizl/stay-in-touch" target="_blank" class="card__project-only">Source Code</a>
+                                        <a href="https://github.com/kwizl/stay-in-touch" target="_blank" class="card__project-only">Github</a>
                                     </div>
                                     <a href="https://social-media.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
@@ -138,7 +138,7 @@
                             <div class="card__side card__side--back card__side--back-3">
                                 <div class="card__cta">
                                     <div class="card__project-box">
-                                        <a href="https://github.com/kwizl/lifestyle" target="_blank" class="card__project-only">Source Code</a>
+                                        <a href="https://github.com/kwizl/lifestyle" target="_blank" class="card__project-only">Github</a>
                                     </div>
                                     <a href="https://secure-brook-97667.herokuapp.com" target="_blank" class="btn btn--white">Live Demo!</a>
                                 </div>
