--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 </div>
             </div>
         </footer>
+        <script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiM2N2MxOGUiLCJ3ZWIiOnsiYm90SWQiOiI2MTY0Njg3YWMwMDFjYzAwMTJhMGIzYmIiLCJ0aGVtZSI6IiM2N2MxOGUiLCJsYWJlbCI6Ik1hcnRpbidzIEJvdCJ9LCJ3ZWxjb21lVGV4dCI6IkNsaWNrIG1lIn0=" async defer></script>
     </body>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
         crossorigin="anonymous"></script>
